[gd_scene load_steps=30 format=2]

[ext_resource path="res://world/load_biome.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/slot_defaultstyle.tres" type="StyleBox" id=2]
[ext_resource path="res://CLockBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/loading_world.tscn" type="PackedScene" id=4]
[ext_resource path="res://player_model/bar.tscn" type="PackedScene" id=5]
[ext_resource path="res://world/inventory_tab.gd" type="Script" id=10]
[ext_resource path="res://world/slot.gd" type="Script" id=11]
[ext_resource path="res://world/UI2.gd" type="Script" id=13]
[ext_resource path="res://gui/inventory.tscn" type="PackedScene" id=14]
[ext_resource path="res://map.tscn" type="PackedScene" id=18]
[ext_resource path="res://menubuild.tscn" type="PackedScene" id=19]
[ext_resource path="res://textures/gui/heal_full.png" type="Texture" id=20]
[ext_resource path="res://textures/car2.png" type="Texture" id=21]
[ext_resource path="res://textures/gui/progbg.png" type="Texture" id=23]
[ext_resource path="res://emotes.gd" type="Script" id=24]
[ext_resource path="res://fps_check.gd" type="Script" id=25]
[ext_resource path="res://textures/gui/y.png" type="Texture" id=26]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=27]
[ext_resource path="res://builds/stone_block_tile.tscn" type="PackedScene" id=30]
[ext_resource path="res://gui/died_menu.tscn" type="PackedScene" id=31]
[ext_resource path="res://gui/car_broked.tscn" type="PackedScene" id=32]
[ext_resource path="res://settings/game_menu.tscn" type="PackedScene" id=33]
[ext_resource path="res://textures/gui/energy.png" type="Texture" id=34]

[sub_resource type="BitmapFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 1
border_color = Color( 0.517647, 0.517647, 0.517647, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_bottom = 1
border_color = Color( 0.662745, 0.662745, 0.662745, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.27451, 0.784314, 0.164706, 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 27 )

[node name="world" type="Node"]

[node name="map" parent="." instance=ExtResource( 1 )]

[node name="UI2" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 13 )

[node name="emotes" type="CenterContainer" parent="UI2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="UI2/emotes"]
margin_left = 220.0
margin_top = 70.0
margin_right = 420.0
margin_bottom = 270.0
columns = 3

[node name="bar0" parent="UI2/emotes/GridContainer" instance=ExtResource( 5 )]

[node name="bar1" parent="UI2/emotes/GridContainer" instance=ExtResource( 5 )]
margin_left = 68.0
margin_right = 132.0

[node name="bar2" parent="UI2/emotes/GridContainer" instance=ExtResource( 5 )]
margin_left = 136.0
margin_right = 200.0

[node name="bar7" parent="UI2/emotes/GridContainer" instance=ExtResource( 5 )]
margin_top = 68.0
margin_bottom = 132.0

[node name="center" type="Control" parent="UI2/emotes/GridContainer"]
margin_left = 68.0
margin_top = 68.0
margin_right = 132.0
margin_bottom = 132.0
rect_min_size = Vector2( 64, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar3" parent="UI2/emotes/GridContainer" instance=ExtResource( 5 )]
margin_left = 136.0
margin_top = 68.0
margin_right = 200.0
margin_bottom = 132.0

[node name="bar6" parent="UI2/emotes/GridContainer" instance=ExtResource( 5 )]
margin_top = 136.0
margin_bottom = 200.0

[node name="bar5" parent="UI2/emotes/GridContainer" instance=ExtResource( 5 )]
margin_left = 68.0
margin_top = 136.0
margin_right = 132.0
margin_bottom = 200.0

[node name="bar4" parent="UI2/emotes/GridContainer" instance=ExtResource( 5 )]
margin_left = 136.0
margin_top = 136.0
margin_right = 200.0
margin_bottom = 200.0

[node name="bars" type="VBoxContainer" parent="UI2"]
margin_top = 16.0
margin_right = 51.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )

[node name="health" type="Control" parent="UI2/bars"]
margin_right = 51.0
margin_bottom = 10.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI2/bars/health"]
margin_left = 1.0
margin_right = 14.0
margin_bottom = 12.0
mouse_filter = 2
texture = ExtResource( 20 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="UI2/bars/health"]
margin_left = 14.0
margin_top = 2.0
margin_right = 50.0
margin_bottom = 11.0
texture = ExtResource( 23 )

[node name="bar_health" type="ProgressBar" parent="UI2/bars/health/bg"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 35.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 3 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 20.0
value = 20.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="car" type="Control" parent="UI2/bars"]
margin_top = 14.0
margin_right = 51.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI2/bars/car"]
margin_left = 1.0
margin_right = 14.0
margin_bottom = 13.0
texture = ExtResource( 21 )
expand = true
stretch_mode = 6

[node name="bg" type="TextureRect" parent="UI2/bars/car"]
margin_left = 14.0
margin_top = 3.0
margin_right = 50.0
margin_bottom = 12.0
texture = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar_health" type="ProgressBar" parent="UI2/bars/car/bg"]
self_modulate = Color( 0.196078, 1, 0, 1 )
margin_left = 1.0
margin_top = 1.0
margin_right = 35.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 3 )
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="energy" type="Control" parent="UI2/bars"]
visible = false
margin_top = 24.0
margin_right = 51.0
margin_bottom = 24.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heal" type="VBoxContainer" parent="UI2/bars/energy"]
anchor_left = 0.025
anchor_top = 0.2
anchor_right = 1.025
anchor_bottom = 0.866667
margin_bottom = -9.0
rect_scale = Vector2( 1, 10 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ProgressBar" type="ProgressBar" parent="UI2/bars/energy/heal"]
margin_right = 50.0
margin_bottom = 1.0
custom_styles/fg = SubResource( 5 )
value = 100.0
percent_visible = false

[node name="TextureRect" type="TextureRect" parent="UI2/bars/energy"]
margin_left = -14.6154
margin_top = -4.61538
margin_right = 17.3846
margin_bottom = 27.3846
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 34 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="hand_slots" type="HBoxContainer" parent="UI2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -45.0
margin_bottom = -11.0
mouse_filter = 0
custom_constants/separation = 1
alignment = 1
script = ExtResource( 10 )

[node name="slot1" type="Panel" parent="UI2/hand_slots"]
margin_left = 229.0
margin_right = 289.0
margin_bottom = 34.0
rect_min_size = Vector2( 60, 34 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 11 )

[node name="slot2" type="Panel" parent="UI2/hand_slots"]
margin_left = 290.0
margin_right = 350.0
margin_bottom = 34.0
rect_min_size = Vector2( 60, 34 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 11 )

[node name="slot3" type="Panel" parent="UI2/hand_slots"]
margin_left = 351.0
margin_right = 411.0
margin_bottom = 34.0
rect_min_size = Vector2( 60, 34 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 11 )

[node name="joystick_movement" type="ColorRect" parent="UI2"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -164.0
margin_right = 160.0
margin_bottom = -44.0
rect_pivot_offset = Vector2( 48, 24 )
color = Color( 0, 0, 0, 0.392157 )

[node name="stick" type="ColorRect" parent="UI2/joystick_movement"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.588235 )

[node name="joystick_attack" type="ColorRect" parent="UI2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -164.0
margin_right = -56.0
margin_bottom = -44.0
color = Color( 0, 0, 0, 0.392157 )

[node name="stick" type="ColorRect" parent="UI2/joystick_attack"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.588235 )

[node name="place_but" type="Button" parent="UI2"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -124.0
margin_right = -80.0
margin_bottom = -60.0
text = "place"

[node name="builds" type="Control" parent="UI2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -90.0
margin_right = 160.0
margin_bottom = 90.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="menu" parent="UI2/builds" instance=ExtResource( 19 )]
visible = false

[node name="inventory" parent="UI2" instance=ExtResource( 14 )]
visible = false

[node name="inv_but" type="Button" parent="UI2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 32.0
margin_right = -13.0
margin_bottom = 72.0
text = "inv"

[node name="pick_up" type="Button" parent="UI2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 80.0
margin_right = -11.0
margin_bottom = 120.0
text = "interact"

[node name="map" type="Control" parent="UI2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="UI2/map"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
stretch = true

[node name="Viewport" type="Viewport" parent="UI2/map/ViewportContainer"]
size = Vector2( 640, 340 )
size_override_stretch = true
handle_input_locally = false
msaa = 4
fxaa = true
hdr = false
usage = 0
render_target_update_mode = 0
gui_disable_input = true

[node name="map" parent="UI2/map/ViewportContainer/Viewport" instance=ExtResource( 18 )]

[node name="died_menu" parent="UI2" instance=ExtResource( 31 )]
visible = false

[node name="car_broked" parent="UI2" instance=ExtResource( 32 )]
visible = false

[node name="Label" type="Label" parent="UI2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 6 )
text = "fps"
clip_text = true
script = ExtResource( 25 )

[node name="bg" type="TextureRect" parent="UI2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -28.0
margin_right = -9.0
margin_bottom = 10.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 26 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="UI2/bg"]
show_behind_parent = true
margin_left = 2.0
margin_top = 3.0
margin_right = 17.0
margin_bottom = 7.0
stretch = true

[node name="Viewport" type="Viewport" parent="UI2/bg/ViewportContainer"]
size = Vector2( 15, 4 )
size_override_stretch = true
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="CLockBar" parent="UI2/bg/ViewportContainer/Viewport" instance=ExtResource( 3 )]

[node name="game_menu" parent="UI2" instance=ExtResource( 33 )]
visible = false

[node name="pause_but" type="Button" parent="UI2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 40.0
margin_right = 103.0
margin_bottom = 48.0
text = "pause"
clip_text = true

[node name="loding_world" parent="UI2" instance=ExtResource( 4 )]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="." instance=ExtResource( 30 )]
visible = false

[connection signal="gui_input" from="UI2/joystick_movement" to="UI2" method="_on_joystick_movement_gui_input"]
[connection signal="gui_input" from="UI2/joystick_attack" to="UI2" method="_on_joystick_attack_gui_input"]
[connection signal="pressed" from="UI2/place_but" to="UI2" method="_on_place_but_pressed"]
[connection signal="pressed" from="UI2/inv_but" to="UI2" method="_on_inv_but_pressed"]
[connection signal="pressed" from="UI2/pick_up" to="UI2" method="_on_pick_up_pressed"]
[connection signal="pressed" from="UI2/pause_but" to="UI2" method="_on_pause_but_pressed"]
